fixing navbar collapse/expand

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,6 @@ div{
     margin:30px 100px 15px 100px;
 }
 
-nav{
-    height:80px;
-}
-
 nav div ul li{
     margin: 0px 15px 0px 15px;
 }
